seller/products/new authorization solved